# Tugas_Akhir

./: README.md
install/: local_setup.sh  setup.sh
install/multi_agent/lib/multi_agent/: apf_navigation  data_logger  leader_follower_navigation  sensor_streamer
install/multi_agent/share/multi_agent/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/multi_agent/share/multi_agent/launch/: multi_agent.launch.py
install/multi_agent/share/multi_agent/urdf/: skid_steer_follower_robot.urdf.xacro
install/multi_agent/share/multi_agent/worlds/: 3last_world.world
install/my_robot_pkg/lib/my_robot_pkg/: robot_controller
install/my_robot_pkg/share/my_robot_pkg/: package.sh  package.xml
install/my_robot_pkg/share/my_robot_pkg/launch/: sim.launch.py
install/skid_steer_robot/lib/skid_steer_robot/: apf_navigation  data_logger  sensor_streamer  test_apf
install/skid_steer_robot/share/skid_steer_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/skid_steer_robot/share/skid_steer_robot/launch/: apf_single-robot.launch.py  coba.launch.py  robot_spawn.launch.py  simulasi.launch.py  teleop.launch.py
install/skid_steer_robot/share/skid_steer_robot/urdf/: skid_steer_robot.urdf.xacro
log/: latest_build
logs/: leader_data_20250620_094149.csv
rosbag2_2025_06_18-20_41_49/: metadata.yaml
rosbag2_2025_06_18-20_41_56/: metadata.yaml
src/multi_agent/: package.xml  setup.cfg  setup.py
src/multi_agent/launch/: apf.launch.py  apf_single-robot.launch.py  test.launch.py
src/multi_agent/urdf/: skid_steer_robot.urdf copy.xacro
src/multi_agent/worlds/: 1simple_world.world  empty_world.world
src/my_robot_pkg/: setup.py
src/skid_steer_robot/: package.xml  setup.cfg  setup.py
src/skid_steer_robot/launch/: apf.launch.py  gazebo.launch.py  how to launch.txt
src/skid_steer_robot/scripts/: analyze_data.py  apf_navigation.py  data_logger.py
src/skid_steer_robot/worlds/: 2simple_world.world  empty_world.world
