<?xml version="1.0"?>
<package format="3">
  <name>my_robot_pkg</name>
  <version>0.0.1</version>
  <description>Package untuk robot simulasi Gazebo</description>
  
  <!-- Dependensi utama -->
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Informasi tambahan -->
  <maintainer email="nurulilmirojabiah@email.com">rojebay</maintainer>
  <license>Apache 2.0</license>
  
  <!-- Ekstensi untuk launch files -->
  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>